Fixed bug: adjusted My Profile display to none on small screes as it was duplicating on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -117,6 +117,16 @@ a.category-badge > span.badge:hover {
     height: 2px;
 }
 
+/* Contact Page img styling*/
+
+.contact-img {
+        max-width: 90%;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+}
+
+
+
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
     width: 0; 
@@ -169,6 +179,12 @@ a.category-badge > span.badge:hover {
 }
 
 /* Allauth form formatting */
+
+.allauth-form-inner-content {
+    margin-bottom: 2.3rem; 
+    padding-bottom: 15px;
+    
+}
 
 .allauth-form-inner-content p {
     margin-top: 1.5rem; /* mt-4 */
@@ -390,3 +406,9 @@ footer {
         padding: .25rem .5rem !important;
     }
 }
+
+@media screen and (max-width: 976px) {
+     #nav-account {
+     display: none
+     }
+    }
